--- a/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
@@ -17,7 +17,7 @@
 
     	{% include "LilyBackOfficeBundle::menu.html.twig" %}
 
-    	<section>
+    	<aside>
       	<section class="vbox">
     	    <section class="scrollable bg-light">
     		    <div class="wrapper-lg row">
@@ -37,7 +37,7 @@
             </div>
           </section>
     	  </section>
-    	</section>
+    	</aside>
   	</section>
 	</section>
 
