--- a/src/Lily/BackOfficeBundle/Resources/views/Redirections/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Redirections/index.html.twig
@@ -18,49 +18,51 @@
 
 	{% block content %}
     <!-- .vbox -->
-    <section class="js-app vbox">
+    <section class="js-app">
 
-        <section class="scrollable">
-          <section class="js-main-container hbox stretch">
-            <aside class="bg-white">
-              <section class="vbox">
-                <section class="scrollable">
-
-                  <header class="bg-white wrapper-sm clearfix b-b">
-                    <div class="col-sm-7 col-xs-9 redirection-view">
-	                   <h5>Titre</h5>
-	                  </div>
-
-                    <div class="col-sm-2 col-xs-3 text-center">
-                      <h5>Fréquence</h5>
-	                  </div>
-
-                    <div class="col-xs-2 redirection-action">
-                      <h5>Défaut</h5>
-                    </div>
-
-                    <div class="col-xs-1 redirection-delete">
-                      <span></span>
-                      <!-- Empty colon to make space for delete button-->
-                    </div>
-                  </header>
-
-                  <ul class="js-redirections-list list-group no-borders no-radius m-b-none list-group-alt list-group-lg">
-                    <!-- Affichage de la liste des redirections -->
-                  </ul>
-
-                  <a class="js-redirection-new btn btn-sm btn-primary pull-right">
-                    <span class="icon-plus pull-left"></span>
-                    Ajouter une redirection
-                  </a>
-
+        <section class="vbox">
+          <section class="scrollable">
+            <section class="js-main-container hbox stretch">
+              <aside class="bg-white">
+                <section class="vbox">
+                  <section class="scrollable">
+  
+                    <header class="bg-white wrapper-sm clearfix b-b">
+                      <div class="col-sm-7 col-xs-9 redirection-view">
+  	                   <h5>Titre</h5>
+  	                  </div>
+  
+                      <div class="col-sm-2 col-xs-3 text-center">
+                        <h5>Fréquence</h5>
+  	                  </div>
+  
+                      <div class="col-xs-2 redirection-action">
+                        <h5>Défaut</h5>
+                      </div>
+  
+                      <div class="col-xs-1 redirection-delete">
+                        <span></span>
+                        <!-- Empty colon to make space for delete button-->
+                      </div>
+                    </header>
+  
+                    <ul class="js-redirections-list list-group no-borders no-radius m-b-none list-group-alt list-group-lg">
+                      <!-- Affichage de la liste des redirections -->
+                    </ul>
+  
+                    <a class="js-redirection-new btn btn-sm btn-primary pull-right">
+                      <span class="icon-plus pull-left"></span>
+                      Ajouter une redirection
+                    </a>
+  
+                  </section>
                 </section>
-              </section>
-            </aside>
-            <!--<aside class="js-redirection-edit aside-redirection bg-light lter hide">
-                Affichage du panneau de modification
-                </aside>
-            -->
+              </aside>
+              <!--<aside class="js-redirection-edit aside-redirection bg-light lter hide">
+                  Affichage du panneau de modification
+                  </aside>
+              -->
+            </section>
           </section>
         </section>
       </section>
