--- a/src/Lily/ChatBundle/Resources/views/Dashboard/skeleton.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Dashboard/skeleton.html.twig
@@ -1,4 +1,4 @@
-<section class="wrapper-lg bg-light scrollable">
+<section class="wrapper-lg bg-light">
 
   <div class="col-lg-6">
   	<section class="js-dashboard-operators-info panel bg-info lter no-borders">
