--- a/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
@@ -47,14 +47,12 @@
             <h5>Questions</h5>
           </div>
         </header>
-        <section class="categories">
-          <section class="categories-wrapper">
-            <ul class="scrollable stretch js-categories-list">
-              <!--
-                Here goes questions' categories
-              -->
-            </ul>
-          </section>
+        <section class="categories scrollable">
+          <ul class="js-categories-list">
+            <!--
+              Here goes questions' categories
+            -->
+          </ul>
         </section>
       </section>
     </aside>
