--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Charts/graph.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Charts/graph.html.twig
@@ -4,7 +4,7 @@
     <span></span><b class="caret"></b>
   </div>
 </header>
-<section class="panel-body bg-white">
+<div class="panel-body bg-white">
   <!-- loader --> 
-  <div class="graph scrollable"></div>
-</section>
+  <div class="graph"></div>
+</div>
