--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Chats/skeleton.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Chats/skeleton.html.twig
@@ -1,29 +1,29 @@
-  <header class="panel-heading font-bold">Historique de conversation
-    <div class="reportrange pull-right">
-      <i class="icon-calendar"></i>
-      <span></span><b class="caret"></b>
-    </div>
-    <div class="btn-group pull-right sort-menu">
-      <button class="btn btn-sm sort-menu-btn dropdown-toggle" data-toggle="dropdown">Trier par
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li data-criteria="start" class="active">Date</li>
-        <li data-criteria="duration">Durée</li>
-        <li data-criteria="satisfaction">Satisfaction</li>
-        <li data-criteria="banned">Banni</li>
-      </ul>
-    </div>
-  </header>
-  <section>
-    <section class="hbox stretch bg-white">
-      <aside>
-        <section class="vbox">
-          <section class="scrollable">
-            <ul class="conversations-list list-group no-radius list-group-alt list-group-lg"></ul>
-          </section>
+<header class="panel-heading font-bold">Historique de conversation
+  <div class="reportrange pull-right">
+    <i class="icon-calendar"></i>
+    <span></span><b class="caret"></b>
+  </div>
+  <div class="btn-group pull-right sort-menu">
+    <button class="btn btn-sm sort-menu-btn dropdown-toggle" data-toggle="dropdown">Trier par
+      <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu">
+      <li data-criteria="start" class="active">Date</li>
+      <li data-criteria="duration">Durée</li>
+      <li data-criteria="satisfaction">Satisfaction</li>
+      <li data-criteria="banned">Banni</li>
+    </ul>
+  </div>
+</header>
+<section>
+  <section class="hbox stretch bg-white">
+    <aside>
+      <section class="vbox">
+        <section class="scrollable">
+          <ul class="conversations-list list-group no-borders no-radius list-group-alt list-group-lg"></ul>
         </section>
-      </aside>
-      <aside class="conversation-details hide"></aside>
-    </section>
+      </section>
+    </aside>
+    <aside class="conversation-details hide"></aside>
   </section>
+</section>
