--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/skeleton.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/skeleton.html.twig
@@ -1,4 +1,4 @@
-<div class="vbox"> 
+<section class="vbox"> 
   <header class="header bg-light bg-gradient">
     <ul class="nav nav-tabs nav-white">
       <li class="users-charts-nav active"><a href="#users-charts-skeleton" data-toggle="tab">Statistiques</a></li>
@@ -6,17 +6,15 @@
       <li class=""><a href="#users-logs-skeleton" data-toggle="tab">Activités</a></li>
     </ul>
   </header>
-  <section>
-    <div class="tab-content hbox stretch">
-      <div class="tab-pane active" id="users-charts-skeleton">
-      <!-- Statistics -->
-      </div>
-      <div class="tab-pane vbox" id="users-chats-skeleton">
-      <!-- Chats -->
-      </div>
-      <div class="tab-pane vbox" id="users-logs-skeleton">
-      <!-- Logs -->
-      </div>
-    </div>
+  <section class="tab-content">
+    <section class="tab-pane vbox active" id="users-charts-skeleton">
+    <!-- Statistics -->
+    </section>
+    <section class="tab-pane vbox" id="users-chats-skeleton">
+    <!-- Chats -->
+    </section>
+    <section class="tab-pane vbox" id="users-logs-skeleton">
+    <!-- Logs -->
+    </section>
   </section>
 </div>
