--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/index.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/index.html.twig
@@ -23,10 +23,11 @@
 
 	{% block content %}
 
-    <!-- .vbox -->
-    <section class="vbox js-skeleton-container">
+    <section>
+      <!-- .vbox -->
+      <section class="js-skeleton-container vbox bg-light"></section>
+      <!-- /.vbox -->
     </section>
-    <!-- /.vbox -->
 
 	{% endblock %}
 
