--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/skeleton.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/skeleton.html.twig
@@ -13,7 +13,7 @@
   </ul>
 </header>
 <section class="tab-content-wrapper scrollable">
-  <section class="hbox stretch tab-content wrapper-lg bg-light">
+  <section class="hbox stretch tab-content wrapper-lg">
     <section class="tab-pane row usage-wrapper">
     <!-- Usage -->
     </section>
