--- a/src/Lily/UserBundle/Resources/views/Admin/Users/edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/Users/edit.html.twig
@@ -1,4 +1,4 @@
-	<section class="scrollable">
+	<section class="scrollable w-f">
 		<div class="wrapper">
 			<div class="clearfix m-b-xlg">
 				<div class="clear">
@@ -13,7 +13,7 @@
   					
   				  <p class="has-errors upload-errors"></p>
   					
-  				  <div class="col-xs-4 no-padder-l avatar-wrapper">
+  				  <div class="col-xs-4 avatar-wrapper">
     				  <input type="file" name="avatarFile" accept="image/*">
     				  <img src="<%= converted.avatar %>" class="avatar">
     				  <button class="btn btn-sm btn-white uploader">Modifier</button>
