--- a/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
@@ -24,7 +24,9 @@
           </ul>
         </header>
         <section>
-          <section class="js-skeleton-container hbox stretch"></section>
+          <section class="hbox stretch">
+            <section class="js-skeleton-container"></section>
+          </section>
         </section>
   	  </section>
 	  </section>
