--- a/src/Lily/UserBundle/Resources/views/Profile/Activities/Chats/skeleton.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Profile/Activities/Chats/skeleton.html.twig
@@ -15,7 +15,15 @@
     </ul>
   </div>
 </header>
-<section class="hbox stretch bg-white">
-  <aside><ul class="conversations-list list-group no-radius list-group-alt list-group-lg"></ul></aside>
-  <aside class="conversation-details hide"></aside>
+<section>
+  <section class="hbox stretch bg-white">
+    <aside>
+      <section class="vbox">
+        <section class="scrollable">
+          <ul class="conversations-list list-group no-borders no-radius list-group-alt list-group-lg"></ul>
+        </section>
+      </section>
+    </aside>
+    <aside class="conversation-details hide"></aside>
+  </section>
 </section>
