--- a/src/Lily/UserBundle/Resources/views/Profile/Activities/skeleton.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Profile/Activities/skeleton.html.twig
@@ -1,4 +1,4 @@
-<div class="vbox"> 
+<section class="vbox"> 
   <header class="header bg-light bg-gradient">
     <ul class="nav nav-tabs nav-white">
       <li class="active"><a href="#statistics" data-toggle="tab">Statistiques</a></li>
@@ -6,20 +6,18 @@
       <li class=""><a href="#logs" data-toggle="tab">Activités</a></li>
     </ul>
   </header>
-  <section>
-    <div class="tab-content hbox stretch">
-      <div class="tab-pane active" id="statistics">
-      <!-- Statistics -->
-      </div>
-      <div class="tab-pane vbox" id="chats">
-      <!-- Chats -->
-      </div>
-      <div class="tab-pane vbox" id="logs">
-      <!-- Logs -->
-      </div>
-      <div class="text-center wrapper">
-        <i class="icon-spinner icon-spin icon-large"></i>
-      </div>
-    </div>
+  <section class="tab-content">
+    <section class="tab-pane vbox active" id="statistics">
+    <!-- Statistics -->
+    </section>
+    <section class="tab-pane vbox strech" id="chats">
+    <!-- Chats -->
+    </section>
+    <section class="tab-pane vbox stretch" id="logs">
+    <!-- Logs -->
+    </section>
+
+    <i class="icon-spinner icon-spin icon-large"></i>
+      
   </section>
-</div>
+</section>
