--- a/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
@@ -23,11 +23,12 @@
 
 	{% block content %}
 
-
-    <!-- .vbox -->
-    <section class="vbox content-wrapper">
+    <section>
+      <!-- .hbox -->
+      <section class="hbox stretch content-wrapper">
+      </section>
+      <!-- /.hbox -->
     </section>
-    <!-- /.vbox -->
 
 	{% endblock %}
 
