--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Chats/details.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/Activities/Chats/details.html.twig
@@ -1,62 +1,61 @@
 
-	<section class="scrollable">
-		<div class="wrapper">
-			<div class="clearfix m-b">
-				<div class="clear">
-					<ul class="conversation-section-list">
-  					
-						<% _.each(messages, function(item) { %>
+	<section class="scrollable wrapper">
+		<ul class="conversation-section-list">
+			
+			<% _.each(messages, function(item) {
+				
+					switch(item.from) { 
+						case 'server': %>
 						
-							<li class="conversation-section-item">
-							
-								<% switch(item.from) { 
-									case 'server':
-									
-										switch(item.action) {
-											case 'startChat': %>
-											
-												<p class="msg-server">Conversation commencée le 
-  												<%= moment(item.date*1000).format('DD MMMM') %> à 
-  												<%= moment(item.date*1000).format('HH:mm') %>
-  										  </p>
-                        <% break;
-                        
-											case 'transfer': %>
-												<p class="msg-server">Transférée le 
-                          <%= moment(item.date*1000).format('DD MMMM HH:mm') %> de
-                          <%= item.transfer_from.firstname %> <%= item.transfer_from.lastname %> à 
-                          <%= item.transfer_to.firstname %> <%= item.transfer_to.lastname %>
-                        </p>
-                        <% break;
-                        
-										}
-										break;
-										
-									case 'operator': %>					
-										<p class="msg-operator">
-  										<%= item.msg %>
-  										<span class="date">
-  										  <%= moment(item.date*1000).format('HH:mm') %>
-  										</span>
-  								  </p>
-  								  <% break;
-										
-									case 'visitor': %>
-										<p class="msg-visitor">
-  										<%= item.msg %>
-                      <span class="date">
-                        <%= moment(item.date*1000).format('HH:mm')%>
-                      </span>
-                    </p>
-                    <% break;
-									
-								} %>
-							</li>
-							
-						<% }); %>
+						  <li class="conversation-section-item">
 						
-					</ul>
-				</div>
-			</div>
-		</div>
+							<% switch(item.action) {
+								case 'startChat': %>
+								
+									<p class="msg-server">Conversation commencée le 
+										<%= moment(item.date*1000).format('DD MMMM') %> à 
+										<%= moment(item.date*1000).format('HH:mm') %>
+								  </p>
+                  <% break;
+                  
+								case 'transfered': %>
+									<p class="msg-server">Conversation transférée le 
+                    <%= moment(item.date*1000).format('DD MMMM') %> à 
+                    <%= moment(item.date*1000).format('HH:mm') %>
+                  </p>
+                  <% break; %>
+                  
+                </li>  
+                
+							<% }
+							break;
+							
+						case 'operator': %>
+						  <li class="conversation-section-item item-operator">
+  							<div class="msg-operator">
+  								<%= item.msg %>
+  								<span class="date">
+  								  <%= moment(item.date*1000).format('HH:mm') %>
+  								</span>
+  						  </div>
+  						</li>
+						  <% break;
+							
+						case 'visitor': %>
+						  <li class="conversation-section-item item-visitor">
+  							<div class="msg-visitor">
+  								<%= item.msg %>
+                  <span class="date">
+                    <%= moment(item.date*1000).format('HH:mm')%>
+                  </span>
+                </div>
+              </div>
+              <% break;
+						
+					} %>
+				</li>
+				
+			<% }); %>
+			
+		</ul>
 	</section>
