--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/skeleton.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/Users/skeleton.html.twig
@@ -1,10 +1,10 @@
-<section class="hbox stretch panel">
-  <aside class="users-activities-wrapper bg-white">
-  <!-- Activities template -->
-  </aside>
-  <aside class="users-list-wrapper bg-light lter b-l">
-    <ul class="users-list">
+<section class="hbox stretch">
+  <aside class="aside-lg">
+    <ul class="js-users-list users-list">
     <!-- Users list -->
     </ul>
+  </aside>
+  <aside class="users-activities-wrapper bg-white">
+  <!-- Activities template -->
   </aside>
 </section>
