--- a/web/css/backoffice/statistics.css
+++ b/web/css/backoffice/statistics.css
@@ -143,12 +143,8 @@ ul.avi-top-list {
 USER
 =======================================================================================================*/
 
-.users-list-wrapper {
-  width: 250px;
-}
-
 .users-list {
-  padding: 0;
+  padding: 0 30px 0 0;
   list-style-type: none;
 }
 
