remove absolute url in demo app

--- a/src/Lily/AppBundle/Resources/views/demo/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/demo/index.html.twig
@@ -20,7 +20,7 @@
 
 {% endblock %}
 
-<script src='http://bruno.saio.fr/app_dev.php/app/snippet/{{licence}}'></script>
+<script src='{{ app.request.getBaseURL() }}/app/snippet/{{licence}}'></script>
 
 </head>
 <body>
