show group id to use with front api

--- a/src/Lily/UserBundle/Resources/views/Admin/Groups/group.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/Groups/group.html.twig
@@ -1,4 +1,5 @@
 <div class="view">
   <button class="destroy close hover-action">×</button>
+  <span class="group-id"><b>Id</b>: <%= id %></span>
   <h5 class="group-name"><%= name %></h5>
 </div>
