changes to font and font property to add consistancy with front + on boarding search in chat

--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Search/search.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Search/search.html.twig
@@ -3,6 +3,9 @@
     <div class="answer-empty">
       <p>Recherchez une question dans votre base de connaissance</p>
     </div>
+    <p class="on-boarding-feature-search">
+      (Nouveau !) Vous pouvez à tout moment rechercher la réponse à une question dans votre base de connaissance. Trouvez plus rapidement l'information recherchée par votre interlocuteur !
+    </p>
     <!-- Here goes the answer-->
   </div>
 </section>
