--- a/web/css/backoffice/main.css
+++ b/web/css/backoffice/main.css
@@ -15,16 +15,17 @@
 }
 
 .modal-dialog.chat-modal-container {
-  width: 96%;
-  height: 96%;
+  width: 94%;
+  height: 90%;
   background: #F3F5F9;
-  border-radius: 3px;
+  border-radius: 6px;
   padding: 0;
-  top: 2%;
+  top: 3%;
   left: 2%;
   bottom: 2%;
   right: 2%;
-  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px rgba(60, 60, 60, 0.22);
 }
 
 .navigation-container {
@@ -90,7 +91,7 @@
 .footer .nav-tabs > li.active a:hover {
   box-shadow: 0px 6px 0px 0 rgba(237, 239, 244, 1);
   background-color: #EDEFF4;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 13px;
   color: #444C5C;
 }
@@ -184,7 +185,7 @@
   position: relative;
   display: inline-block;
   min-width: 10px;
-  font-weight: bold;
+  font-weight: 700;
   white-space: nowrap;
   text-align: center;
   border-radius: 50%
