widget v2 first draft

--- a/src/Lily/AppBundle/Resources/views/themes/widget/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/widget/index.html.twig
@@ -37,6 +37,7 @@
     config.root = '{{ app.request.getBaseURL() }}';
     config.licence = "{{ licence }}";
     config.chatAvailable = "{{ chatAvailable }}";
+    var clientConfig = {{ clientConfig|serialize('json') }};
   </script>
 
   <!-- Load Bugsnag -->
